# operator

./: .clang-format  .clang-tidy  .clang-uml  .gitignore  .gitmodules  CMAKE_BUILD.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_commands.json  conanfile.py  conanfile.txt  driver.mk  make  operator.yml
.devcontainer/: Dockerfile  devcontainer.json  install-dev-tools.sh  reinstall-cmake.sh
.github/workflows/: run-tests.yml  test-report.yml
docs/.obsidian/: workspace.json
docs/diagrams/ER_V/: README.md
docs/diagrams/Ichor/: README.md
src/ActiveMQ_Demo/: consumer.cpp  demo.mk
src/ER_V/: CMakeLists.txt  README.md  active_mq_client_demo.cpp  api_demo.c  erv.mk  log_demo.c  main.c  main.cpp  operator_er_v.mk  service.cpp  service.h
src/ER_V/acl/: acl.c  acl.cpp  acl.h  acl.hpp  acl_private.h  acl_private.hpp
src/ER_V/erv_arm/: erv.cpp  erv.h  erv.hpp
src/ER_V/erv_conf/: erv_conf.cpp  erv_conf.h  erv_conf.hpp
src/Ichor/: CMakeLists.txt  all_tests.cpp  dummy_i2c_main.cpp  dummy_main.cpp  ichor.mk  main.cpp  temp.c
src/Ichor/arm/: ichor_arm.cpp  ichor_arm.h  ichor_arm.hpp
src/Ichor/conf/: ichor_conf.cpp  ichor_conf.h  ichor_conf.hpp
src/Ichor/driver/: .gitignore  CMakeLists.txt  README.md
src/Ichor/driver/.github/: pull_request_template.md
src/Ichor/driver/src/motorhat/: MotorHAT.cpp
src/Ichor/driver/src/pwm/: PCA9685.cpp  PCA9685.hpp
src/Ichor/rpi_setup/boot/: setup.sh
src/Ichor/rpi_setup/img/: mod.sh
src/common/: CMakeLists.txt  common.mk
src/common/api/: api.c  api.cpp  api.h  api.hpp  api_private.h
src/common/arm/: arm.cpp  arm.h  arm.hpp
src/common/conf/: config.cpp  config.h  example.conf
src/common/crc/: ansi.h  ccitt.h  crc.cpp  crc.h
src/common/data/: list.h  s_list.c  s_list.cpp  s_list.h  s_list.hpp  s_list_test.cpp
src/common/log/: log.c  log.cpp  log.h  log.hpp  log_ansi_color.h  log_architecture.md  log_config.cpp  log_config.h  log_config.hpp  log_private.h  log_private.hpp
src/common/proto/icd/v1/: icd.pb.h
src/common/socket/: socket.cpp  socket.h  socket.hpp  socket_conf.cpp  socket_conf.h  socket_conf.hpp
src/common/sub/: inbox.h  inbox.hpp  sub.cpp  sub.h  sub.hpp  sub_private.h
src/common/tamq/: tamq.cpp  tamq.h  tamq_conf.cpp  tamq_conf.h  tamq_sub.cpp  tamq_sub.h
src/common/tmp/: tmp.cpp  tmp.h
src/common/tmp/tests/: tmp_test.cpp
src/common/util/: array.h  array.hpp  comm.h  comm.hpp  file_descriptor.hpp  time.h  time.hpp  timestamp.c  timestamp.cpp  timestamp.h  timestamp.hpp
src/dac/: PCA9685PW.cpp  PCA9685PW.h
src/driver/: driver.cpp  driver.h
src/enc/: encoder.cpp  encoder.h
src/gpio/: isr.cpp  isr.h  pin.h
src/gpio/test/: dummy_gpio.cpp  dummy_gpio.h  patch.txt  stolen.c  stolen.cpp
src/mcp/: MCP23017.cpp  MCP23017.hpp
src/motor/: motor.cpp  motor.h
src/motorhat/: MotorHAT.cpp  MotorHAT.hpp
src/proto/: CMakeLists.txt
src/proto/icd/v1/: icd.grpc.pb.cc  icd.grpc.pb.h  icd.pb.cc
src/pwm/: PCA9685.cpp  PCA9685.hpp
src/serial/: i2c_dev.cpp  i2c_dev.h  serial.cpp  serial.h
src/serial/test/: dummy_i2c.cpp  dummy_i2c.h
tests/: CMakeLists.txt  tests.mk
tests/ER_V/: CMakeLists.txt  erv_tests.mk
tests/ER_V/erv_arm/: test_erv_arm.cpp
tests/ER_V/erv_conf/: test_erv_config.cpp
tests/Ichor/: CMakeLists.txt  ichor_tests.mk
tests/Ichor/arm/: test_ichor_arm.cpp
tests/Ichor/conf/: test_ichor_conf.cpp
tests/common/: CMakeLists.txt  all_tests.cpp  common_tests.mk
tests/common/api/: test_api.cpp
tests/common/conf/: test_config_parsing.cpp  test_config_sys.cpp
tests/common/data/: s_list_test.cpp
tests/common/log/: test_log_config.cpp
tests/common/socket/: test_socket_config.cpp
tools/: TTY_Reader.py  manual_mode_guesser.py
